make-a-wish-salesforce/src/objects/npsp__Schedulable__c.object
<CustomObject>
    <description>Stores those classes that we want to schedule with a certain frequency.</description>
    <fields>
        <fullName>npsp__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the job will be active or not.</description>
        <inlineHelpText>Determines if the job will be active or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Class_Name__c</fullName>
        <description>Class that will be scheduled to run at a certain frequency.</description>
        <inlineHelpText>Class that will be scheduled to run at a certain frequency.</inlineHelpText>
        <label>Class Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Frequency__c</fullName>
        <description>How ofter to run the job.</description>
        <inlineHelpText>How ofter to run the job.</inlineHelpText>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hourly</fullName>
                </value>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Last_Time_Run__c</fullName>
        <description>Last time the job was run.</description>
        <inlineHelpText>Last time the job was run.</inlineHelpText>
        <label>Last Time Run</label>
        <type>DateTime</type>
    </fields>
    <label>DEPRECATED-Schedulable</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DEPRECATED-Schedulables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>